[[bin]]
name = "mkb_registrar"
path = "src/main_mkb_registrar.rs"

[[bin]]
name = "keygen_secp256k1"
path = "src/main_keygen_secp256k1.rs"


[package]
name = "mkb"
version = "0.1.0"
license = "MIT"
homepage = "https://gitlab.com/legicash/legicash-mkb"
repository = "https://gitlab.com/legicash/legicash-mkb"
authors = ["Mathieu Dutour Sikiric <Mathieu.Dutour@gmail.com>"]


[dependencies]
jsonrpc-http-server = "10.0.1"
#jsonrpc-tcp-server = "10.0.1"
jsonrpc-ipc-server = "10.0.1"
jsonrpc-ws-server = "10.0.1"
jsonrpc-macros = "10.0.1"
jsonrpc-pubsub = "10.0.1"
jsonrpc-core = "10.0.1"

rocksdb = "0.8.1"
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1/", features = [ "rand", "serde" ]}
#rocksdb = { git = "https://github.com/nervosnetwork/rust-rocksdb" }
multi-party-schnorr = { git = "https://github.com/KZen-networks/multi-party-schnorr" }
rust_sodium = "~0.10.0"
serde_json = "1.0.37"
serde = "1.0"
serde_derive = "1.0"
log = "0.4.6"
ring = "0.13.5"

keccak-hash = "0.1"


#parity-ethereum = { git = "https://github.com/paritytech/parity-ethereum" }
#multi-party-ecdsa = { git = "https://github.com/KZen-networks/multi-party-ecdsa" }

