[[bin]]
name = "mkb_registrar"
path = "src/main_mkb_registrar.rs"

[[bin]]
name = "keygen_secp256k1"
path = "src/main_keygen_secp256k1.rs"


[package]
name = "mkb"
version = "0.1.0"
license = "MIT"
homepage = "https://gitlab.com/legicash/legicash-mkb"
repository = "https://gitlab.com/legicash/legicash-mkb"
authors = ["Mathieu Dutour Sikiric <Mathieu.Dutour@gmail.com>"]


[dependencies]
#json stuff
jsonrpc-http-server = "10.0.1"
jsonrpc-ipc-server = "10.0.1"
jsonrpc-ws-server = "10.0.1"
jsonrpc-macros = "10.0.1"
jsonrpc-pubsub = "10.0.1"
jsonrpc-core = "10.0.1"
jsonrpc-client-http = { version = "0.5.0", features = [ "tls" ] }
jsonrpc-client-core = { version = "0.5.0" }
#jsonrpc-tcp-server = "10.0.1"


#serde stuff
#serde_json = { version = "1.0.37", features = ["arbitrary_precision"]}
serde_json = "1.0.37"
serde = "1.0"
serde_derive = "1.0"


#Hash functionality. A commonly used library.
multihash = "*"



#pure rust stuff
numext-fixed-hash = "0.1.2"
merkle-cbt = { version = "0.1.1", features = [ "sha3"] }

#large integers
num = "0.2.0"
num-derive = "0.2"
num-bigint = { version = "0.2.2", features = [ "serde" ] }
num-traits = "0.2.6"
num-format = { version = "0.1", features = ["num-bigint", "with-serde"] }

log = "0.4.6"

rocksdb = "0.8.1"
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1/", features = [ "rand", "serde" ]}
multi-party-schnorr = { git = "https://github.com/KZen-networks/multi-party-schnorr" }



#cryto stuff
#ring = "0.13.5"
#keccak-hash = "0.1"

#ed25519
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", features = [ "serde" ] }


#rocksdb = { git = "https://github.com/nervosnetwork/rust-rocksdb" }
#rust_sodium = "~0.10.0"
#parity-ethereum = { git = "https://github.com/paritytech/parity-ethereum" }
#multi-party-ecdsa = { git = "https://github.com/KZen-networks/multi-party-ecdsa" }

